Ajouter wizard pour la configuration par défaut
